--- a/css/contenidoDC.css
+++ b/css/contenidoDC.css
@@ -28,6 +28,17 @@ h3 {
     margin: 0.2em;
 }
 
+h4 {
+    font-size: 125%;
+    color: #403000;    
+    margin: 0em 0.1em;
+    padding: 0em 0.2em;
+}
+
+aside p {
+    margin-top: 0.5em;
+}
+
 input {
     font-family: cuerpo_Font;
     font-size: 125%;
@@ -41,6 +52,12 @@ img {
     width: 40%;
     margin: 0.5em;
     float: right;
+}
+
+video {
+    display: block;
+    margin: 0em auto;
+    width: auto;
 }
 
 a {
@@ -74,26 +91,17 @@ a:visited {
 /* Contenido */
 .contenido {
     border: 1px black solid;
-    display: flex;
+    display: block;
 }
 /*
 .principal {
 
 }*/
 
-.principal article {
+article {
     text-align: justify;
-}
-
-.secundario {
-    border: 1px black solid;
-    display: grid;
-    text-align: justify;
-    padding: 0.2em;
-}
-
-.secundario h3{
-    text-align: center;
+    padding: 0em 1em;
+    padding-bottom: 2em;
 }
 
 .iconos_redes {
@@ -149,4 +157,10 @@ a:visited {
     border: 1px black solid;
     overflow: hidden;
     word-break: normal;
+}
+
+.lista {
+    font-family: cuerpo_Font;
+    font-size: 110%;
+    text-align: justify;
 }
