--- a/css/contenidoTC.css
+++ b/css/contenidoTC.css
@@ -19,7 +19,7 @@ h2 {
     font-size: 250%;
     font-family: titulos_Font;
     margin: 0.2em;
-    color: #3D0907;
+    color: #782c2c;
 }
 
 h3 {
