--- a/css/comun.css
+++ b/css/comun.css
@@ -13,6 +13,14 @@
     src: url("../fonts/Baloo_Tammudu_2/BalooTammudu2-SemiBold.ttf");
 }
 
+
+html {
+    /*
+    background-attachment: fixed;
+    background-image: url(../images/fondo.jpg);
+    background-size: cover;*/
+    background-color: whitesmoke;
+}
 #cabecera a {
     font-family: menu_Font;
     font-size: 94%;
